# counseling-project-planning

./: .gitignore  .pylintrc  BUILDING.md  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile-uml  conanfile.py  gen_docs.sh
data/: transcript.txt  university.txt
src/: Application.cpp  Application.hpp  dataclasses-test.hpp  dataclasses.hpp  main.cpp
src/logic/: LogicUnitBase.hpp
src/storage/: BasicStorage.cpp  ExampleStorage.cpp  ExampleStorage.hpp  StorageBase.hpp
src/ui/: BasicUI.cpp  ExampleUI.cpp  ExampleUI.hpp  UIBase.hpp
test/: CMakeLists.txt  test_factorial.cpp
